updated files for booking app 4/27

--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -6,6 +6,7 @@
             <div class="">
             <h1>This is the Home Page</h1>
             <p> Here lies some text.</p>
+            <img src="https://www.houseplans.net/news/wp-content/uploads/2023/07/57260-768.jpeg" height="250" width="350">
             </div>
         </div>
     </div>
